--- a/productos.html
+++ b/productos.html
@@ -153,8 +153,6 @@
                             <button class="btn btn-primary add-to-cart-btn">Añadir al Carrito</button>
                         </div>
                     </div>
-
-                    <!-- PRODUCTOS INDIVIDUALES -->
                     <!-- Caja HDPE 15kg (chica) -->
                     <div class="product-card" data-product-id="201" data-product-price="8.00">
                         <div class="badge">Caja Chica</div>
@@ -491,14 +489,10 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/es.js"></script>
     <script type="module" src="/assets/js/main.js"></script>
-
-    <!-- INTEGRACIÓN DE FECHAS BLOQUEADAS Y VALIDACIÓN DE INVENTARIO (NOVEDAD) -->
+    <!-- SECCIÓN CRUCIAL: FECHAS Y CARRITO SIEMPRE SINCRONIZADAS -->
     <script>
     document.addEventListener('DOMContentLoaded', async () => {
-        // --- URL ABSOLUTA DEL BACKEND ---
         const BACKEND_URL = 'https://greenhaul-backend-production.up.railway.app';
-
-        // --- Bloquear fechas saturadas en el calendario ---
         const entregaInput = document.getElementById('fecha-entrega');
         const recoleccionInput = document.getElementById('fecha-recoleccion');
         let entregasBloqueadas = [], recoleccionesBloqueadas = [];
@@ -508,9 +502,8 @@
             const data = await resp.json();
             entregasBloqueadas = data.entregasBloqueadas || [];
             recoleccionesBloqueadas = data.recoleccionesBloqueadas || [];
-        } catch (e) { entregasBloqueadas = []; recoleccionesBloqueadas = []; }
+        } catch (e) {}
 
-        // Bloquear fechas en inputs tipo date
         entregaInput.addEventListener('input', function() {
             if (entregasBloqueadas.includes(this.value)) {
                 this.setCustomValidity('Ya hay 3 entregas programadas en esa fecha. Selecciona otra.');
@@ -524,7 +517,6 @@
             } else { this.setCustomValidity(''); }
         });
 
-        // Si usas flatpickr, bloquea fechas desde aquí
         if (window.flatpickr) {
             flatpickr(entregaInput, {
                 locale: 'es',
@@ -540,10 +532,8 @@
 
         // --- Guardar fechas en localStorage al cambiar ---
         function updateRentalDatesInCart() {
-            const startDateInput = entregaInput;
-            const endDateInput = recoleccionInput;
-            const start = startDateInput.value;
-            const end = endDateInput.value;
+            const start = entregaInput.value;
+            const end = recoleccionInput.value;
             if (start && end) {
                 let cart = JSON.parse(localStorage.getItem('shoppingCart')) || { items: [] };
                 cart.rentalDates = { start, end };
@@ -563,7 +553,7 @@
             recoleccionInput.value = cart.rentalDates.end || '';
         }
 
-        // --- Validar inventario antes de añadir al carrito ---
+        // --- Validar inventario y SIEMPRE guardar fechas antes de añadir al carrito ---
         document.querySelectorAll('.add-to-cart-btn').forEach(btn => {
             btn.addEventListener('click', async function(e) {
                 const card = btn.closest('.product-card');
@@ -593,8 +583,27 @@
                     alert('Error al verificar inventario. Intenta de nuevo.');
                     return;
                 }
-                // Si pasa la validación, continúa con tu lógica original para añadir al carrito en localStorage
-                // ...
+                // GUARDA las fechas SIEMPRE cuando se agrega un producto
+                let cart = JSON.parse(localStorage.getItem('shoppingCart')) || { items: [] };
+                cart.rentalDates = { start: fechaInicio, end: fechaFin };
+                const startDate = new Date(fechaInicio);
+                const endDate = new Date(fechaFin);
+                cart.totalDays = Math.max(Math.round((endDate - startDate) / (1000 * 60 * 60 * 24)), 1);
+
+                // Añadir producto al carrito
+                const itemInCart = cart.items.find(item => item.id == productId);
+                if (itemInCart) {
+                    itemInCart.quantity += cantidad;
+                } else {
+                    cart.items.push({
+                        id: productId,
+                        name: card.querySelector('h3').textContent,
+                        price: parseFloat(card.getAttribute('data-product-price')),
+                        quantity: cantidad
+                    });
+                }
+                localStorage.setItem('shoppingCart', JSON.stringify(cart));
+                alert(`${card.querySelector('h3').textContent} añadido al carrito.`);
             });
         });
     });
