--- a/productos.html
+++ b/productos.html
@@ -116,11 +116,11 @@
                     <div class="date-fields" style="display: flex; gap: 2rem; flex-wrap: wrap;">
                         <div class="form-group">
                             <label for="fecha-entrega"><i class="fas fa-calendar-alt"></i> Fecha de Entrega</label>
-                            <input type="date" id="fecha-entrega" name="fecha-entrega" class="form-control" autocomplete="off">
+                            <input type="text" id="fecha-entrega" name="fecha-entrega" class="form-control" autocomplete="off">
                         </div>
                         <div class="form-group">
                             <label for="fecha-recoleccion"><i class="fas fa-calendar-check"></i> Fecha de Recolección</label>
-                            <input type="date" id="fecha-recoleccion" name="fecha-recoleccion" class="form-control" autocomplete="off">
+                            <input type="text" id="fecha-recoleccion" name="fecha-recoleccion" class="form-control" autocomplete="off">
                         </div>
                     </div>
                     <div id="dates-warning" style="color:var(--accent-red);margin-top:8px;display:none;"></div>
